--- a/Tarea 3/Base.lproj/Main.storyboard
+++ b/Tarea 3/Base.lproj/Main.storyboard
@@ -1,26 +1,116 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="X3Q-D6-xXz">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--PracticandoTVC-->
+        <scene sceneID="3WE-OG-rqO">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tableViewController id="X3Q-D6-xXz" customClass="PracticandoTVC" customModule="Tarea_3" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="66" sectionHeaderHeight="28" sectionFooterHeight="28" id="qRc-Tk-TE7">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="Z7Z-Ka-oqk">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" white="0.87198893229166663" alpha="1" colorSpace="calibratedWhite"/>
+                        </view>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="celda" rowHeight="66" id="QFN-SZ-Nzz" customClass="ObjetoTVCell" customModule="Tarea_3" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="72" width="375" height="66"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="QFN-SZ-Nzz" id="NKc-LS-Hbh">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="66"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h9x-T9-crx">
+                                            <rect key="frame" x="8" y="8" width="44.5" height="21"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jcM-Sp-jgM">
+                                            <rect key="frame" x="8" y="36.5" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V0d-7v-Rhr">
+                                            <rect key="frame" x="317" y="22.5" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="h9x-T9-crx" firstAttribute="leading" secondItem="NKc-LS-Hbh" secondAttribute="leading" constant="8" id="4X0-d8-ode"/>
+                                        <constraint firstItem="jcM-Sp-jgM" firstAttribute="leading" secondItem="NKc-LS-Hbh" secondAttribute="leading" constant="8" id="A2f-XA-rYB"/>
+                                        <constraint firstItem="V0d-7v-Rhr" firstAttribute="centerY" secondItem="NKc-LS-Hbh" secondAttribute="centerY" id="Tgw-aE-KMC"/>
+                                        <constraint firstItem="h9x-T9-crx" firstAttribute="top" secondItem="NKc-LS-Hbh" secondAttribute="top" constant="8" id="i6O-4T-hCk"/>
+                                        <constraint firstAttribute="bottom" secondItem="jcM-Sp-jgM" secondAttribute="bottom" constant="8" id="rMj-oo-KAY"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="V0d-7v-Rhr" secondAttribute="trailing" constant="8" id="wm3-tY-oSQ"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="lblDireccion" destination="jcM-Sp-jgM" id="apO-hB-gQc"/>
+                                    <outlet property="lblLugar" destination="h9x-T9-crx" id="0jN-7a-doK"/>
+                                    <outlet property="lblNumero" destination="V0d-7v-Rhr" id="eDt-Dw-tPC"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="X3Q-D6-xXz" id="Eck-qk-DFv"/>
+                            <outlet property="delegate" destination="X3Q-D6-xXz" id="Xhu-K4-dZv"/>
+                        </connections>
+                    </tableView>
+                    <connections>
+                        <segue destination="gm4-wl-9jl" kind="show" identifier="siguiente" id="TQa-d1-euq"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NVS-vw-awV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="95" y="127"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="nMa-A4-gHH">
+            <objects>
+                <viewController id="gm4-wl-9jl" customClass="ViewController" customModule="Tarea_3" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Ehm-Ii-dP9"/>
+                        <viewControllerLayoutGuide type="bottom" id="4Ft-V1-cIm"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="mUe-3b-IDv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LIh-mN-qg4">
+                                <rect key="frame" x="166.5" y="40" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="LIh-mN-qg4" firstAttribute="centerX" secondItem="mUe-3b-IDv" secondAttribute="centerX" id="dO3-xy-q6n"/>
+                            <constraint firstItem="LIh-mN-qg4" firstAttribute="top" secondItem="Ehm-Ii-dP9" secondAttribute="bottom" constant="20" id="eTX-44-ZBA"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="lblDireccion" destination="LIh-mN-qg4" id="i3b-Ib-Kwf"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XCW-cF-mhX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="831" y="126"/>
         </scene>
     </scenes>
 </document>
